# Yagura

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  compose.yaml
.github/workflows/: build.yml
proto/: tsugi_agent.proto
src/: agent.rs  alert.rs  api.rs  beat.rs  collector.rs  db.rs  docker.rs  drift.rs  host.rs  main.rs  probe.rs  version.rs
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: App.tsx  api.ts  grouping.ts  index.css  usePersisted.ts
web/src/components/: Drift.tsx  Footer.tsx  HostMetrics.tsx  LogView.tsx  Overview.tsx  Picker.tsx  Releases.tsx  Sidebar.tsx  Sparkline.tsx  StatusBadge.tsx  StatusDot.tsx  Uptime.tsx
