[package]
name = "yagura"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
async-stream = "0.3.6"
axum = "0.8.9"
bollard = "0.21.0"
futures-util = "0.3.32"
mime_guess = "2.0.5"
rusqlite = { version = "0.40.1", features = ["bundled"] }
rust-embed = "8.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[profile.release]
strip = true
lto = true
